@@ -7,11 +7,11 @@ cd /root/packages/
 ```
 İndirdiğimiz tomcat dosyasını tar komutu ile açıp daha sonra opt dizininin altına tomcat ismiyle taşıyoruz.
 ```
-wget http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.69/bin/apache-tomcat-7.0.69.tar.gz
-tar xpfz apache-tomcat-7.0.69.tar.gz
-mv apache-tomcat-7.0.69 /opt/
+wget http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.32/bin/apache-tomcat-8.0.32.tar.gz
+tar xpfz apache-tomcat-8.0.32.tar.gz
+mv apache-tomcat-8.0.32 /opt/
 cd /opt
-ln -s apache-tomcat-7.0.69/ tomcat
+ln -s apache-tomcat-8.0.32/ tomcat
 ```
 Tomcat kurulumu için çevresel değişkenleri .bashrc dosyasını nano ile açıp içine export ifadelerini ekliyoruz. Bu sayede sunucu her başladığında tomcat için çevresel değişkenler aktif olacaktır.
 ```
@@ -30,7 +30,7 @@ nano setenv.sh
 ```
 Bu ayarlar sizin sunucu konfigürasyonuna göre değişiklik gösterecektir. Örneğin burada tomcat için max 1024 mb hafıza ayarlanmıştır, sakai 1024 mb'tan fazla hafıza kullanmak istediğinde out of memory(yetersiz hafıza) uyarısı verecektir.
 ```
-export JAVA_OPTS="-server -Xmx1028m -XX:MaxPermSize=320m -Dorg.apache.jasper.compiler.Parser.STRICT_QUOTE_ESCAPING=false -Djava.awt.headless=true -Dcom.sun.management.jmxremote -Dsun.lang.ClassLoader.allowArraySyntax=true -Djava.security.egd=file:/dev/./urandom"
+export JAVA_OPTS='-server -Xms512m -Xmx1024m -XX:PermSize=128m -XX:NewSize=192m -XX:MaxNewSize=384m -Djava.awt.headless=true -Dhttp.agent=Sakai -Dorg.apache.jasper.compiler.Parser.STRICT_QUOTE_ESCAPING=false -Dsun.lang.ClassLoader.allowArraySyntax=true -Djava.security.egd=file:/dev/./urandom'
 ```
 Setenv.sh dosyasını çalıştırabilir hale getirip. Tomcat server'ın UTF8 desteğini ekliyoruz.
 ```
@@ -62,10 +62,10 @@ nano conf/catalina.properties
 Sakai'nin tomcat için birkaç özel ayarı bulunmaktadır. Bunların catalina.properties dosyasında düzenlenmesi gerekir.
 Düzenlenmeniz gereken satırlar aşğıda verilmiştir.
 
-common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar   satırını aşağıdaki gibi düzenliyoruz.
+common.loader="${catalina.base}/lib","${catalina.base}/lib/*.jar","${catalina.home}/lib","${catalina.home}/lib/*.jar"   satırını aşağıdaki gibi düzenliyoruz.
 
 ```
-common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar,${catalina.base}/common/classes/,${catalina.base}/common/lib/*.jar
+common.loader="${catalina.base}/lib","${catalina.base}/lib/*.jar","${catalina.home}/lib","${catalina.home}/lib/*.jar","${catalina.base}/common/classes/","${catalina.base}/common/lib/*.jar"
 ```
 
 server.loader= burasıda normalde boş gelmektedir, aşağıdaki satırı ekliyoruz.
